[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Logo" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "RolinChat MVP"
horizontal_alignment = 1

[node name="CreateBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Crear Sala (Host)"

[node name="JoinHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IPInput" type="LineEdit" parent="VBox/JoinHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "IP del Host..."

[node name="JoinBtn" type="Button" parent="VBox/JoinHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Unirse"

[node name="AvatarBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Configurar Avatar"

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3
